# rust-axum-app

./: .env  .env.example  Cargo.toml  README.md
migrations/: 001_create_users.sql  002_create_microposts.sql  003_create_relationships.sql
src/: app.rs  config.rs  error.rs  main.rs
src/auth/: jwt.rs  middleware.rs
src/database/: mod.rs  users.rs
src/handlers/: mod.rs  static_pages.rs
src/handlers/api/: mod.rs
src/models/: micropost.rs  mod.rs  relationship.rs  user.rs
src/templates/: mod.rs
