[package]
name = "rust-boilerplate"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Email
lettre = "0.11"

# Environment
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Image processing
image = "0.24"

# Pagination
serde_qs = "0.12"

[dev-dependencies]
tokio-test = "0.4"
